Use new Java features (switch expressions, text blocks, new JDK methods)
Closes gh-29747